<resources>
    <string name="app_name">Cartel2022_test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map">Carte</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_partner">Partenaire</string>
    <string name="menu_match">Match</string>
    <string name="menu_socialNetwork">Réseaux Sociaux</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_party">Soirée</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

   <!-- Name for buttons -->
    <string name="school">Ecoles participantes</string>
    <string name="planning">Planning</string>
    <string name="social_network">Réseaux Sociaux</string>
    <string name="ranking">Classement</string>
    <string name="urgency_contact">Contact des responsables</string>
    <string name="map">Plan</string>
    <string name="partner">Partenaires</string>
    <string name="aboutUs">À propos de nous</string>
    <string name="sports">Sports</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="web_site">Site Internet</string>
    <string name="url_facebook">https://www.facebook.com/profile.php?id=100058158610701</string>
    <string name="url_instagram">https://www.instagram.com/cartel_sainte_2022</string>
    <string name="url_web_site">https://www.cartel2022.fr/</string>
</resources>