<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cartel2022_test.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cartel2022_test.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cartel2022_test.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.cartel2022_test.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.cartel2022_test.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_match"
        android:name="com.example.cartel2022_test.ui.planning.PlanningFragment"
        android:label="@string/menu_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/nav_partner"
        android:name="com.example.cartel2022_test.ui.partner.PartnerFragment"
        android:label="@string/menu_partner"
        tools:layout="@layout/fragment_partner" />

    <fragment
        android:id="@+id/nav_social_network"
        android:name="com.example.cartel2022_test.ui.planning.PlanningFragment"
        android:label="@string/menu_socialNetwork"
        tools:layout="@layout/fragment_social_network" />

    <fragment
        android:id="@+id/nav_party"
        android:name="com.example.cartel2022_test.ui.party.PartyFragment"
        android:label="@string/menu_party"
        tools:layout="@layout/fragment_party" />

    <fragment
        android:id="@+id/nav_sport"
        android:name="com.example.cartel2022_test.ui.sport.SportFragment"
        android:label="@string/menu_sport"
        tools:layout="@layout/fragment_sport" />

</navigation>